Finished Sampled Experiment and Skleanr Models

--- a/examples/Iris Example.ipynb
+++ b/examples/Iris Example.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -86,28 +86,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define now the experiment we want to run using a configuration dictionary."
+    "We define now the experiment we want to run using a configuration dictionary. The class model.SKlearnModel provides a simple API to create models wrapping Scikit-learn learners."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import model\n",
+    "model = reload(model)\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "config = {\n",
-    "    'model': LogisticRegression,\n",
-    "    'model_params': {'C': 0.5, 'n_jobs': 2}\n",
+    "    'model': model.SkleanrModel,\n",
+    "    'model_arguments': {'model_class': LogisticRegression, 'sklearn_model_arguments': {'C': 0.5, 'n_jobs': 2}}\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -119,34 +121,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We run the experiments. The simple experiment just trains the classifier with the 'train' partition and prints the classification report for the 'test' partition predictions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:\n",
+      "\tPrecision\tRecall\tF1 Score\tSupport\n",
+      "Class 0\t1.0\t1.0\t1.0\t10.0\n",
+      "Class 1\t1.0\t0.8\t0.888888888889\t10.0\n",
+      "Class 2\t0.833333333333\t1.0\t0.909090909091\t10.0\n"
+     ]
+    }
+   ],
    "source": [
     "lr_experiment.run()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Iris Sampled Example\n",
+    "===\n",
+    "\n",
+    "The framework also allows to run experiments in multiple samples with the same command, and obtain global metrics. For this, we will use the SimpleSampledDataset and the SampledExperiment class. This classes will create the samples for us, and train/evaluate the classifier in each of them."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "partition_sizes = {'train': 0.8, 'test': 0.2}"
+    "partition_sizes = {'train': 0.8, 'test': 0.2}\n",
+    "samples = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from dataset import SimpleSampledDataset\n",
+    "\n",
+    "iris_sampled_dataset = SimpleSampledDataset()\n",
+    "iris_sampled_dataset.create_samples(iris.data, iris.target, samples, partition_sizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "experiment = reload(experiment)\n",
+    "\n",
+    "# We use the same config as before\n",
+    "config = {\n",
+    "    'model': model.SkleanrModel,\n",
+    "    'model_arguments': {'model_class': LogisticRegression, 'sklearn_model_arguments': {'C': 0.5, 'n_jobs': 2}}\n",
+    "}\n",
+    "iris_sampled_experiment = experiment.SampledExperiment(iris_sampled_dataset, config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:\n",
+      "\tPrecision\tRecall\tF1 Score\n",
+      "mean\t0.98\t0.98\t0.98\n",
+      "std\t0.0163299316186\t0.0163299316186\t0.0163299316186\n"
+     ]
+    }
+   ],
+   "source": [
+    "iris_sampled_experiment.run()"
    ]
   },
   {
